k3s/laravel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
  labels:
    app: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: php-fpm
          image: ghcr.io/zabergeier/php-fpm-k3s:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: laravel-storage
              mountPath: /var/www/storage
            - name: laravel-public-assets
              mountPath: /var/www/public/build

        - name: nginx
          image: ghcr.io/zabergeier/nginx-k3s:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: laravel-storage
              mountPath: /var/www/storage
              readOnly: true
            - name: laravel-public-assets
              mountPath: /var/www/public/build
              readOnly: true

      volumes:
        - name: laravel-storage
          persistentVolumeClaim:
            claimName: laravel-storage-pvc
        - name: laravel-public-assets
          persistentVolumeClaim:
            claimName: laravel-public-assets-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: laravel
spec:
  selector:
    app: laravel
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel
                port:
                  number: 80
